# inneros-zettelkasten

./: .env.sample  .gitignore  .gitignore-distribution  .pre-commit-config.yaml  Automation Project Manifest.md  CLAUDE.md  CLI-REFERENCE.md  CONSOLIDATION-COMPLETE.md  CONTRIBUTING.md  Chrome Clippings.md  FEATURE-STATUS.md  GETTING-STARTED.md  GITHUB-ISSUE-45-PRIORITY4-TRACKING.md  GITHUB-ISSUE-45-UPDATE.md  GITHUB-ISSUE-cli-syntax-bug.md  Home Note.md  INSTALLATION.md  MIGRATION-GUIDE.md  Makefile  NEXT-SESSION-PROMPT-cli-integration-tests.md  NEXT_CHAT_PROMPT.md  NEXT_SESSION_PROMPT.md  NEXT_SESSION_YOUTUBE_OFFICIAL_API.md  NY post about financial supportbwithbchat.md  PHASE_5_3_SUMMARY.md  PR-DESCRIPTION.md  Phase-5-User-Journey-Flowchart.md  Project-Todo.md  Projects MOC.md  QUICK-REFERENCE.md  QUICK-START-PROMOTION.md  README.md  SESSION-SUMMARY-2025-11-09.md  TDD-Project-Manifest.md  TRY-IT-NOW.sh  USABILITY-DASHBOARD.md  WORKFLOW_DEMO.md  Windsurf Project Changelog.md  Windsurf Project Instructions.md  Windsurf Project Manifest.md  (+31 more)
development/: ARCHITECTURE-DASHBOARD.md  DAILY-USAGE-GUIDE.md  Makefile  PRODUCTION-READY-FINAL.md  PRODUCTION-TEST-GUIDE.md  PRODUCTION-TEST-RESULTS.md  PROGRESS-BAR-IMPLEMENTATION.md  README-dev.md  REGRESSION-TESTS-SUMMARY.md  REVIEW-SESSION-2025-10-11.md  RUN-CONTRACT-TESTS.md  TDD-CONTRACT-TEST-LESSONS.md  TEST-STATUS-SUMMARY.md  UX-IMPROVEMENTS.md  capture_matcher.py  daemon_config.dist.yaml  daemon_config.yaml  demo_dashboard.py  demo_dashboard_status.py  demo_integration_complete.py  demo_subdirectory_benefits.sh  fix_metadata.py  (+31 more)
(+2800 files in other folders)
